[tool.poetry]
name = "kesa-data-api"
version = "0.1.0"
description = ""
authors = ["soreach <heabeoun69zin@gmail.com>"]
readme = "README.md"
packages = [{include = "kesa_data_api"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
